# GitCore

./: .coderabbit.yaml  .propagation.json  AGENTS.md  CHANGELOG.md  README.md  install.ps1  install.sh  pr69-diff.txt
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  code-review.agent.md  commit-helper.agent.md  context-loader.agent.md  pr-creator.agent.md  protocol-claude.agent.md  protocol-codex.agent.md  protocol-gemini.agent.md  protocol-grok.agent.md  quick.agent.md  recipe-loader.agent.md  router.agent.md  workflow-manager.agent.md
.github/issues/: .issue-mapping.json  BUG_install_unicode_encoding.md  DOCS_dependency-workflow-system.md  FEAT_prompt-export-continuation.md  FEAT_rust-issue-syncer.md
.github/workflows/: agent-dispatcher.yml  build-cli.yml  build-tools.yml  copilot-auto-implementation.yml  copilot-meta-analysis.yml  dependency-quarantine.yml  e2e-testing.yml  email-cleanup.yml  global-self-healing.yml  guardian-agent.yml  living-context.yml  post-quarantine-analysis.yml  protocol-propagation.yml  self-healing-simple.yml  self-healing.yml  structure-validator.yml  (+3 more)
docs/: AUTOMATION_SETUP.md  CLI_TRUST.md  PROTOCOL_PROPAGATION.md
scripts/: check-protocol-update.ps1  git-atomize.ps1  git-atomize.sh  init_project.sh  install-cli.ps1  next-task.ps1  release-protocol.ps1
tools/workflow-orchestrator/: Cargo.toml  README.md
tools/workflow-orchestrator/benches/: guardian_benchmarks.rs
tools/workflow-orchestrator/src/: analyzer.rs  dispatcher_core.rs  github.rs  guardian_core.rs  lib.rs  main.rs  parallel.rs  reporter.rs  validator.rs
tools/workflow-orchestrator/tests/: integration_guardian.rs
(+30 files in other folders)
